Course Attendance front-end. Marvin core is complete.

--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -25,6 +25,7 @@
 					<li><h:link outcome="/core/manageAcademics/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageAcademics']}" /></h:link></li>
 					<li><h:link outcome="/core/manageCourses/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageCourses']}" /></h:link></li>
 					<li><h:link outcome="/core/manageCourseCoordinations/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageCourseCoordinations']}" /></h:link></li>
+					<li><h:link outcome="/core/manageCourseAttendances/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageCourseAttendances']}" /></h:link></li>
 				</ul>
 			</li>
 		</h:panelGroup>
