--- a/WebContent/sae/manageEducations/form.xhtml
+++ b/WebContent/sae/manageEducations/form.xhtml
@@ -9,37 +9,37 @@
                 template="/WEB-INF/decorators/#{coreInfo.decorator}/decorator.xhtml">
 
 	<ui:define name="title">
-		<h:outputText value="#{msgsCore['manageAcademics.title.create']}" rendered="#{(! manageAcademicsController.readOnly) and (manageAcademicsController.selectedEntity.id == null)}" />
-		<h:outputText value="#{msgsCore['manageAcademics.title.update']}" rendered="#{(! manageAcademicsController.readOnly) and (manageAcademicsController.selectedEntity.id != null)}" />
-		<h:outputText value="#{msgsCore['manageAcademics.title.retrieve']}" rendered="#{manageAcademicsController.readOnly}" />
+		<h:outputText value="#{msgsSae['manageEducations.title.create']}" rendered="#{(! manageEducationsController.readOnly) and (manageEducationsController.selectedEntity.id == null)}" />
+		<h:outputText value="#{msgsSae['manageEducations.title.update']}" rendered="#{(! manageEducationsController.readOnly) and (manageEducationsController.selectedEntity.id != null)}" />
+		<h:outputText value="#{msgsSae['manageEducations.title.retrieve']}" rendered="#{manageEducationsController.readOnly}" />
 	</ui:define>
     
     <ui:define name="description">
-		<h:outputText value="#{msgsCore['manageAcademics.title.create.description']}" rendered="#{(! manageAcademicsController.readOnly) and (manageAcademicsController.selectedEntity.id == null)}" />
-		<h:outputText value="#{msgsCore['manageAcademics.title.update.description']}" rendered="#{(! manageAcademicsController.readOnly) and (manageAcademicsController.selectedEntity.id != null)}" />
-		<h:outputText value="#{msgsCore['manageAcademics.title.retrieve.description']}" rendered="#{manageAcademicsController.readOnly}" />
+		<h:outputText value="#{msgsSae['manageEducations.title.create.description']}" rendered="#{(! manageEducationsController.readOnly) and (manageEducationsController.selectedEntity.id == null)}" />
+		<h:outputText value="#{msgsSae['manageEducations.title.update.description']}" rendered="#{(! manageEducationsController.readOnly) and (manageEducationsController.selectedEntity.id != null)}" />
+		<h:outputText value="#{msgsSae['manageEducations.title.retrieve.description']}" rendered="#{manageEducationsController.readOnly}" />
     </ui:define>
 
 	<ui:define name="body">
 		<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form.xhtml">
 			<ui:param name="formName" value="form" />
-			<ui:param name="formLabel" value="#{msgsCore['manageAcademics.form.title']}" />
+			<ui:param name="formLabel" value="#{msgsSae['manageEducations.form.title']}" />
 			<p:hotkey bind="#{msgs['jbutler.crud.hotkey.focusFirstField']}" handler="findObjectById('form:name').focus();" />
 
 			<!-- Field: name. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="name" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.name']}" />
-				<p:inputText id="name" value="#{manageAcademicsController.selectedEntity.name}" required="true" pt:placeholder="#{msgsCore['manageAcademics.field.name.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
-					<p:ajax event="blur" update="nameField shortNameField" listener="#{manageAcademicsController.suggestShortName}" />
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.name']}" />
+				<p:inputText id="name" value="#{manageEducationsController.selectedEntity.name}" required="true" pt:placeholder="#{msgsSae['manageEducations.field.name.placeholder']}" disabled="#{manageEducationsController.readOnly}">
+					<p:ajax event="blur" update="nameField shortNameField" listener="#{manageEducationsController.suggestShortName}" />
 				</p:inputText>
 			</ui:decorate>
 
 			<!-- Field: email. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="email" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.email']}" />
-				<p:inputText id="email" value="#{manageAcademicsController.selectedEntity.email}" required="true" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.email']}" />
+				<p:inputText id="email" value="#{manageEducationsController.selectedEntity.email}" required="true" disabled="#{manageEducationsController.readOnly}">
 					<p:ajax event="blur" update="emailField" />
 				</p:inputText>
 			</ui:decorate>
@@ -47,8 +47,8 @@
 			<!-- Field: shortName. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="shortName" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.shortName']}" />
-				<p:inputText id="shortName" value="#{manageAcademicsController.selectedEntity.shortName}" required="true" pt:placeholder="#{msgsCore['manageAcademics.field.shortName.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.shortName']}" />
+				<p:inputText id="shortName" value="#{manageEducationsController.selectedEntity.shortName}" required="true" pt:placeholder="#{msgsSae['manageEducations.field.shortName.placeholder']}" disabled="#{manageEducationsController.readOnly}">
 					<p:ajax event="blur" update="shortNameField" />
 				</p:inputText>
 			</ui:decorate>
@@ -56,8 +56,8 @@
 			<!-- Field: cpf. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="cpf" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.cpf']}" />
-				<p:inputMask id="cpf" mask="#{msgs['jbutler.format.taxCode.primefaces']}" value="#{manageAcademicsController.selectedEntity.cpf}" required="true" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.cpf']}" />
+				<p:inputMask id="cpf" mask="#{msgs['jbutler.format.taxCode.primefaces']}" value="#{manageEducationsController.selectedEntity.cpf}" required="true" disabled="#{manageEducationsController.readOnly}">
 						<f:ajax event="blur" render="cpfField" />
 				</p:inputMask>
 			</ui:decorate>
@@ -65,8 +65,8 @@
 			<!-- Field: IdentityCard. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="identityCard" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.identityCard']}" />
-				<p:inputMask id="identityCard" mask="#{msgs['jbutler.regex.identityCard']}" maxlength="9" validatorMessage="jbutler.regex.identityCard.message" pt:placeholder="#{msgsCore['manageAcademics.field.identityCard.placeholder']}" value="#{manageAcademicsController.selectedEntity.identityCard}" required="false" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.identityCard']}" />
+				<p:inputMask id="identityCard" mask="#{msgs['jbutler.regex.identityCard']}" maxlength="9" validatorMessage="jbutler.regex.identityCard.message" pt:placeholder="#{msgsSae['manageEducations.field.identityCard.placeholder']}" value="#{manageEducationsController.selectedEntity.identityCard}" required="false" disabled="#{manageEducationsController.readOnly}">
 						<f:ajax event="blur" render="identityCardField" />
 				</p:inputMask>
 			</ui:decorate>
@@ -74,8 +74,8 @@
 			<!-- Field: BirthCity. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="birthCity" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.birthCity']}" />
-				<p:inputText id="birthCity" value="#{manageAcademicsController.selectedEntity.birthCity}" required="false" pt:placeholder="#{msgsCore['manageAcademics.field.birthCity.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.birthCity']}" />
+				<p:inputText id="birthCity" value="#{manageEducationsController.selectedEntity.birthCity}" required="false" pt:placeholder="#{msgsSae['manageEducations.field.birthCity.placeholder']}" disabled="#{manageEducationsController.readOnly}">
 					<p:ajax event="blur" update="birthCityField" />
 				</p:inputText>
 			</ui:decorate>
@@ -83,8 +83,8 @@
 			<!-- Field: Nationality. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="nationality" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.nationality']}" />
-				<p:inputText id="nationality" value="#{manageAcademicsController.selectedEntity.nationality}" required="false" pt:placeholder="#{msgsCore['manageAcademics.field.nationality.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.nationality']}" />
+				<p:inputText id="nationality" value="#{manageEducationsController.selectedEntity.nationality}" required="false" pt:placeholder="#{msgsSae['manageEducations.field.nationality.placeholder']}" disabled="#{manageEducationsController.readOnly}">
 					<p:ajax event="blur" update="nationalityField" />
 				</p:inputText>
 			</ui:decorate>
@@ -92,8 +92,8 @@
 			<!-- Field: birthDate. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="birthDate" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.birthDate']}" />
-				<p:inputMask id="birthDate" mask="#{msgs['jbutler.format.date.primefaces']}" value="#{manageAcademicsController.selectedEntity.birthDate}" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.birthDate']}" />
+				<p:inputMask id="birthDate" mask="#{msgs['jbutler.format.date.primefaces']}" value="#{manageEducationsController.selectedEntity.birthDate}" disabled="#{manageEducationsController.readOnly}">
 					<p:ajax event="blur" update="birthDateField" />
 					<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.date.java']}" />
 				</p:inputMask>
@@ -103,13 +103,13 @@
 			<!-- Field: roles. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="roles" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.roles']}" />
-				<p:autoComplete id="roles" multiple="true" value="#{manageAcademicsController.selectedRoles}" completeMethod="#{manageAcademicsController.completeRoles}" var="role" itemLabel="#{role.name}" itemValue="#{role}" converter="#{manageAcademicsController.roleConverter}" forceSelection="true" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.roles']}" />
+				<p:autoComplete id="roles" multiple="true" value="#{manageEducationsController.selectedRoles}" completeMethod="#{manageEducationsController.completeRoles}" var="role" itemLabel="#{role.name}" itemValue="#{role}" converter="#{manageEducationsController.roleConverter}" forceSelection="true" disabled="#{manageEducationsController.readOnly}">
 					<p:column>
 						<h:outputText value="#{role.name}" />
 					</p:column>
 					<p:column>
-						<h:outputText value="#{msgsCore[role.descriptionKey]}" />
+						<h:outputText value="#{msgsSae[role.descriptionKey]}" />
 					</p:column>
 				</p:autoComplete>			
 			</ui:decorate>
@@ -117,13 +117,13 @@
 			<!-- Field: academic roles. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="academicRoles"/>
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.academicRoles']}"/>
-				<p:autoComplete id="academicRoles" multiple="true" value="#{manageAcademicsController.selectedAcademicRoles}" completeMethod="#{manageAcademicsController.completeAcademicRoles}" var="academicRole" itemLabel="#{academicRole.name}" itemValue="academicRole" converter="#{manageAcademicsController.academicRoleConverter}" forceSelection="true" disabled="true">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.academicRoles']}"/>
+				<p:autoComplete id="academicRoles" multiple="true" value="#{manageEducationsController.selectedAcademicRoles}" completeMethod="#{manageEducationsController.completeAcademicRoles}" var="academicRole" itemLabel="#{academicRole.name}" itemValue="academicRole" converter="#{manageEducationsController.academicRoleConverter}" forceSelection="true" disabled="true">
 					<p:column>
 						<h:outputText value="#{academicRole.name}" />
 					</p:column>
 					<p:column>
-						<h:outputText value="#{msgsCore[academicRole.descriptionKey]}" />
+						<h:outputText value="#{msgsSae[academicRole.descriptionKey]}" />
 					</p:column>
 				</p:autoComplete>			
 			</ui:decorate>
@@ -131,56 +131,56 @@
 			<!-- Field: lattesId. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="lattesId" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.lattesId']}" />
-				<p:inputText id="lattesId" value="#{manageAcademicsController.selectedEntity.lattesId}" required="false" pt:placeholder="#{msgsCore['manageAcademics.field.lattesId.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
+				<ui:param name="label" value="#{msgsSae['manageEducations.field.lattesId']}" />
+				<p:inputText id="lattesId" value="#{manageEducationsController.selectedEntity.lattesId}" required="false" pt:placeholder="#{msgsSae['manageEducations.field.lattesId.placeholder']}" disabled="#{manageEducationsController.readOnly}">
 					<p:ajax event="blur" update="lattesIdField" />
 				</p:inputText>
 			</ui:decorate>
 
 			<!-- Field: creationDate. -->
-			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
+			<h:panelGroup rendered="#{manageEducationsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 					<ui:param name="fieldName" value="creationDate" />
-					<ui:param name="label" value="#{msgsCore['manageAcademics.field.creationDate']}" />
-					<p:inputText id="creationDate" value="#{manageAcademicsController.selectedEntity.creationDate}" disabled="true">
+					<ui:param name="label" value="#{msgsSae['manageEducations.field.creationDate']}" />
+					<p:inputText id="creationDate" value="#{manageEducationsController.selectedEntity.creationDate}" disabled="true">
 						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
 					</p:inputText>
 				</ui:decorate>
 			</h:panelGroup>
 
 			<!-- Field: lastUpdateDate. -->
-			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
+			<h:panelGroup rendered="#{manageEducationsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 					<ui:param name="fieldName" value="lastUpdateDate" />
-					<ui:param name="label" value="#{msgsCore['manageAcademics.field.lastUpdateDate']}" />
-					<p:inputText id="lastUpdateDate" value="#{manageAcademicsController.selectedEntity.lastUpdateDate}" disabled="true">
+					<ui:param name="label" value="#{msgsSae['manageEducations.field.lastUpdateDate']}" />
+					<p:inputText id="lastUpdateDate" value="#{manageEducationsController.selectedEntity.lastUpdateDate}" disabled="true">
 						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
 					</p:inputText>
 				</ui:decorate>
 			</h:panelGroup>
 
 			<!-- Field: lastLoginDate. -->
-			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
+			<h:panelGroup rendered="#{manageEducationsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 					<ui:param name="fieldName" value="lastLoginDate" />
-					<ui:param name="label" value="#{msgsCore['manageAcademics.field.lastLoginDate']}" />
-					<p:inputText id="lastLoginDate" value="#{manageAcademicsController.selectedEntity.lastLoginDate}" disabled="true">
+					<ui:param name="label" value="#{msgsSae['manageEducations.field.lastLoginDate']}" />
+					<p:inputText id="lastLoginDate" value="#{manageEducationsController.selectedEntity.lastLoginDate}" disabled="true">
 						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
 					</p:inputText>
 				</ui:decorate>
 			</h:panelGroup>
 
-			<h:panelGroup rendered="#{! manageAcademicsController.readOnly}">
+			<h:panelGroup rendered="#{! manageEducationsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-02.xhtml">
-					<p:commandButton id="cancelButton" action="#{manageAcademicsController.list}" value="#{msgs['jbutler.crud.button.cancel']}" immediate="true" icon="fa fa-fw fa-close" />
-					<p:commandButton id="saveButton" action="#{manageAcademicsController.save}" value="#{msgs['jbutler.crud.button.save']}" update=":form :globalMessages" icon="fa fa-fw fa-save" />
+					<p:commandButton id="cancelButton" action="#{manageEducationsController.list}" value="#{msgs['jbutler.crud.button.cancel']}" immediate="true" icon="fa fa-fw fa-close" />
+					<p:commandButton id="saveButton" action="#{manageEducationsController.save}" value="#{msgs['jbutler.crud.button.save']}" update=":form :globalMessages" icon="fa fa-fw fa-save" />
 					<p:defaultCommand target="saveButton" />
-					<p:hotkey bind="#{msgs['jbutler.crud.hotkey.backToList']}" action="#{manageAcademicsController.list}" immediate="true" />
+					<p:hotkey bind="#{msgs['jbutler.crud.hotkey.backToList']}" action="#{manageEducationsController.list}" immediate="true" />
 				</ui:decorate>
 			</h:panelGroup>
-			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
+			<h:panelGroup rendered="#{manageEducationsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-01.xhtml">
-					<p:commandButton id="backButton" action="#{manageAcademicsController.list}" value="#{msgs['jbutler.crud.button.back']}" immediate="true" icon="fa fa-fw fa-arrow-circle-left" />
+					<p:commandButton id="backButton" action="#{manageEducationsController.list}" value="#{msgs['jbutler.crud.button.back']}" immediate="true" icon="fa fa-fw fa-arrow-circle-left" />
 					<p:hotkey bind="#{msgs['jbutler.crud.hotkey.backToList']}" action="#{manageInstitutionsController.list}" immediate="true" />
 				</ui:decorate>
 			</h:panelGroup>
