--- a/WebContent/sae/manageSuggestion/list.xhtml
+++ b/WebContent/sae/manageSuggestion/list.xhtml
@@ -8,32 +8,32 @@
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 template="/WEB-INF/decorators/#{coreInfo.decorator}/decorator.xhtml">
 
-	<ui:define name="title"><h:outputText value="#{msgsCore['manageAcademics.title']}" /></ui:define>
+	<ui:define name="title"><h:outputText value="#{msgsSae['manageSuggestions.title']}" /></ui:define>
     
-    <ui:define name="description"><h:outputText value="#{msgsCore['manageAcademics.title.description']}" /></ui:define>
+    <ui:define name="description"><h:outputText value="#{msgsSae['manageSuggestions.title.description']}" /></ui:define>
 
 	<ui:define name="body">
 		<!-- Filter bar: used to filter the listing (displayed when there is at least one filter available). -->
-		<h:panelGroup id="filterBar" rendered="#{(not empty manageAcademicsController.filters)}">
+		<h:panelGroup id="filterBar" rendered="#{(not empty manageSuggestionsController.filters)}">
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form-nobox.xhtml">
 				<ui:param name="formName" value="filterForm" />
 
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield-filter.xhtml">
-					<p:selectOneMenu id="filter" required="true" value="#{manageAcademicsController.filterKey}">
-						<f:selectItems value="#{manageAcademicsController.filters}" var="filter" itemLabel="#{filter.label}" itemValue="#{filter.key}" />
-						<f:ajax event="change" execute="@form" listener="#{manageAcademicsController.changeFilter}" render="@form :listingForm" />
+					<p:selectOneMenu id="filter" required="true" value="#{manageSuggestionsController.filterKey}">
+						<f:selectItems value="#{manageSuggestionsController.filters}" var="filter" itemLabel="#{filter.label}" itemValue="#{filter.key}" />
+						<f:ajax event="change" execute="@form" listener="#{manageSuggestionsController.changeFilter}" render="@form :listingForm" />
 					</p:selectOneMenu>
-					<p:inputText id="filterText" required="false" value="#{manageAcademicsController.filterParam}" rendered="#{manageAcademicsController.filter.options == null}" />
-					<p:selectOneMenu id="filterSelect" required="false" value="#{manageAcademicsController.filterParam}" rendered="#{manageAcademicsController.filter.options != null}">
-						<f:selectItems value="#{manageAcademicsController.filter.reversedOptionsLabels}" />
+					<p:inputText id="filterText" required="false" value="#{manageSuggestionsController.filterParam}" rendered="#{manageSuggestionsController.filter.options == null}" />
+					<p:selectOneMenu id="filterSelect" required="false" value="#{manageSuggestionsController.filterParam}" rendered="#{manageSuggestionsController.filter.options != null}">
+						<f:selectItems value="#{manageSuggestionsController.filter.reversedOptionsLabels}" />
 					</p:selectOneMenu>
-					<p:commandButton action="#{manageAcademicsController.filter}" value="#{msgs['jbutler.crud.button.filter']}" process="@form" update=":listingForm @form" icon="fa fa-fw fa-search" />
-					<p:commandButton action="#{manageAcademicsController.cancelFilter}" value="#{msgs['jbutler.crud.button.cancelFilter']}" process="@form" update=":listingForm @form" icon="fa fa-fw fa-close" rendered="#{manageAcademicsController.filtering}" />
-					<p:commandButton action="#{manageAcademicsController.clearFilter}" value="#{msgs['jbutler.crud.button.clearFilter']}" process="@form" update=":listingForm @form" icon="fa fa-fw fa-eraser" rendered="#{not manageAcademicsController.filtering}" />
+					<p:commandButton action="#{manageSuggestionsController.filter}" value="#{msgs['jbutler.crud.button.filter']}" process="@form" update=":listingForm @form" icon="fa fa-fw fa-search" />
+					<p:commandButton action="#{manageSuggestionsController.cancelFilter}" value="#{msgs['jbutler.crud.button.cancelFilter']}" process="@form" update=":listingForm @form" icon="fa fa-fw fa-close" rendered="#{manageSuggestionsController.filtering}" />
+					<p:commandButton action="#{manageSuggestionsController.clearFilter}" value="#{msgs['jbutler.crud.button.clearFilter']}" process="@form" update=":listingForm @form" icon="fa fa-fw fa-eraser" rendered="#{not manageSuggestionsController.filtering}" />
 				</ui:decorate>
 				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.filterFocus']}" handler="if (findObjectById('filterForm:filterText') != null) findObjectById('filterForm:filterText').focus(); else findObjectById('filterForm:filterSelect').focus();" />
-				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.clearFilter']}" action="#{manageAcademicsController.cancelFilter}" process="@form" update=":listingForm @form" rendered="#{manageAcademicsController.filtering}" />
-				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.clearFilter']}" action="#{manageAcademicsController.clearFilter}" process="@form" update=":listingForm @form" rendered="#{not manageAcademicsController.filtering}" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.clearFilter']}" action="#{manageSuggestionsController.cancelFilter}" process="@form" update=":listingForm @form" rendered="#{manageSuggestionsController.filtering}" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.clearFilter']}" action="#{manageSuggestionsController.clearFilter}" process="@form" update=":listingForm @form" rendered="#{not manageSuggestionsController.filtering}" />
 			</ui:decorate>
 		</h:panelGroup>
 		
@@ -43,24 +43,24 @@
 
 			<p:dataTable
 				widgetVar="listingTable"
-				value="#{manageAcademicsController.lazyEntities}" 
+				value="#{manageSuggestionsController.lazyEntities}" 
 				var="entity" 
-				rows="#{manageAcademicsController.maxDataTableRowsPerPage}" 
-				rowsPerPageTemplate="#{manageAcademicsController.halfMaxDataTableRowsPerPage},#{manageAcademicsController.maxDataTableRowsPerPage},#{manageAcademicsController.doubleMaxDataTableRowsPerPage}"
+				rows="#{manageSuggestionsController.maxDataTableRowsPerPage}" 
+				rowsPerPageTemplate="#{manageSuggestionsController.halfMaxDataTableRowsPerPage},#{manageSuggestionsController.maxDataTableRowsPerPage},#{manageSuggestionsController.doubleMaxDataTableRowsPerPage}"
 				lazy="true" 
 				paginator="true" 
-				selection="#{manageAcademicsController.selectedEntity}" 
+				selection="#{manageSuggestionsController.selectedEntity}" 
 				selectionMode="single" 
 				paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}" 
 				paginatorPosition="bottom" 
 				loadingMessage="#{msgs['jbutler.text.ajax.loading']}" 
-				emptyMessage="#{manageAcademicsController.filtering ? msgsCore['manageAcademics.text.noEntitiesFiltered'] : msgsCore['manageAcademics.text.noEntities']}">
+				emptyMessage="#{manageSuggestionsController.filtering ? msgsSae['manageSuggestions.text.noEntitiesFiltered'] : msgsSae['manageSuggestions.text.noEntities']}">
 
-				<p:column headerText="#{msgsCore['manageAcademics.field.name']}">
+				<p:column headerText="#{msgsSae['manageSuggestions.field.name']}">
 					<h:outputText value="#{entity.name}" />
 				</p:column>
 
-				<p:column headerText="#{msgsCore['manageAcademics.field.email']}">
+				<p:column headerText="#{msgsSae['manageSuggestions.field.email']}">
 					<h:outputText value="#{entity.email}" />
 				</p:column>
 
@@ -75,32 +75,32 @@
 			<!-- Buttons shown below the listing. -->
 			<h:panelGroup id="buttonsGroup">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-04.xhtml">
-					<p:commandButton action="#{manageAcademicsController.create}" value="#{msgs['jbutler.crud.button.create']}" icon="fa fa-fw fa-user-plus" />
-					<p:commandButton action="#{manageAcademicsController.retrieve}" value="#{msgs['jbutler.crud.button.retrieve']}" icon="fa fa-fw fa-file-text" disabled="#{manageAcademicsController.selectedEntity == null}" />
-					<p:commandButton action="#{manageAcademicsController.update}" value="#{msgs['jbutler.crud.button.update']}" icon="fa fa-fw fa-refresh" disabled="#{manageAcademicsController.selectedEntity == null}" />
-					<p:commandButton action="#{manageAcademicsController.trash}" value="#{msgs['jbutler.crud.button.delete']}" icon="fa fa-fw fa-trash-o" disabled="#{manageAcademicsController.selectedEntity == null}" process="@this" update=":listingForm:trashGroup" />
+					<p:commandButton action="#{manageSuggestionsController.create}" value="#{msgs['jbutler.crud.button.create']}" icon="fa fa-fw fa-user-plus" />
+					<p:commandButton action="#{manageSuggestionsController.retrieve}" value="#{msgs['jbutler.crud.button.retrieve']}" icon="fa fa-fw fa-file-text" disabled="#{manageSuggestionsController.selectedEntity == null}" />
+					<p:commandButton action="#{manageSuggestionsController.update}" value="#{msgs['jbutler.crud.button.update']}" icon="fa fa-fw fa-refresh" disabled="#{manageSuggestionsController.selectedEntity == null}" />
+					<p:commandButton action="#{manageSuggestionsController.trash}" value="#{msgs['jbutler.crud.button.delete']}" icon="fa fa-fw fa-trash-o" disabled="#{manageSuggestionsController.selectedEntity == null}" process="@this" update=":listingForm:trashGroup" />
 				</ui:decorate>
-				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.create']}" action="#{manageAcademicsController.create}" />
-				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.retrieve']}" action="#{manageAcademicsController.retrieve}" rendered="#{manageAcademicsController.selectedEntity != null}" />
-				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.update']}" action="#{manageAcademicsController.update}" rendered="#{manageAcademicsController.selectedEntity != null}" />
-				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.delete']}" action="#{manageAcademicsController.trash}" rendered="#{manageAcademicsController.selectedEntity != null}" process="@this" update=":listingForm:trashGroup" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.create']}" action="#{manageSuggestionsController.create}" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.retrieve']}" action="#{manageSuggestionsController.retrieve}" rendered="#{manageSuggestionsController.selectedEntity != null}" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.update']}" action="#{manageSuggestionsController.update}" rendered="#{manageSuggestionsController.selectedEntity != null}" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.delete']}" action="#{manageSuggestionsController.trash}" rendered="#{manageSuggestionsController.selectedEntity != null}" process="@this" update=":listingForm:trashGroup" />
 			</h:panelGroup>
 
 			<!-- The trash panel: shows entities that have been selected for deletion. -->
 			<h:panelGroup id="trashGroup">
-				<h:panelGroup rendered="#{not empty manageAcademicsController.trashCan}">
+				<h:panelGroup rendered="#{not empty manageSuggestionsController.trashCan}">
 					<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form-danger.xhtml">
 						<ui:param name="formName" value="trashForm" />
 						<ui:param name="formLabel" value="#{msgs['jbutler.crud.text.trashHeader']}" />
-						<p:dataList value="#{manageAcademicsController.trashCan}" var="entity" type="ordered">
+						<p:dataList value="#{manageSuggestionsController.trashCan}" var="entity" type="ordered">
 			            	#{entity.name} 
 			            </p:dataList>
 						<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-02.xhtml">
-							<p:commandButton action="#{manageAcademicsController.cancelDeletion}" value="#{msgs['jbutler.crud.button.cancelDeletion']}" icon="fa fa-fw fa-close" process="@this" update=":listingForm" />
-							<p:commandButton action="#{manageAcademicsController.delete}" value="#{msgs['jbutler.crud.button.confirmDeletion']}" icon="fa fa-fw fa-trash-o" process="@this" update=":globalMessages :listingForm" />
+							<p:commandButton action="#{manageSuggestionsController.cancelDeletion}" value="#{msgs['jbutler.crud.button.cancelDeletion']}" icon="fa fa-fw fa-close" process="@this" update=":listingForm" />
+							<p:commandButton action="#{manageSuggestionsController.delete}" value="#{msgs['jbutler.crud.button.confirmDeletion']}" icon="fa fa-fw fa-trash-o" process="@this" update=":globalMessages :listingForm" />
 						</ui:decorate>
-						<p:hotkey bind="#{msgs['jbutler.crud.hotkey.cancelDeletion']}" action="#{manageAcademicsController.cancelDeletion}" process="@this" update=":listingForm" />
-						<p:hotkey bind="#{msgs['jbutler.crud.hotkey.confirmDeletion']}" action="#{manageAcademicsController.delete}" process="@this" update=":globalMessages :listingForm"/>
+						<p:hotkey bind="#{msgs['jbutler.crud.hotkey.cancelDeletion']}" action="#{manageSuggestionsController.cancelDeletion}" process="@this" update=":listingForm" />
+						<p:hotkey bind="#{msgs['jbutler.crud.hotkey.confirmDeletion']}" action="#{manageSuggestionsController.delete}" process="@this" update=":globalMessages :listingForm"/>
 					</ui:decorate>
 				</h:panelGroup>
 			</h:panelGroup>
