Integrate C2D's view into Marvin

--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -54,6 +54,9 @@
 				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
 					<li><h:link outcome="/research/uploadLattesCV/index"><h:outputText value="#{msgsResearch['core.menu.research.uploadLattesCV']}" /></h:link></li>
 					<li><h:link outcome="/research/generateBibliography/index"><h:outputText value="#{msgsResearch['core.menu.research.generateBibliography']}" /></h:link></li>
+					<li><h:link outcome="/research/importQualisData/index"><h:outputText value="#{msgsResearch['core.menu.research.importQualisData']}" /></h:link></li>
+					<li><h:link outcome="/research/createNewScoreSystem/index"><h:outputText value="#{msgsResearch['core.menu.research.createNewScoreSystem']}" /></h:link></li>
+					<li><h:link outcome="/research/calculateAcademicsScores/index"><h:outputText value="#{msgsResearch['core.menu.research.calculateAcademicsScore']}" /></h:link></li>
 				</ul>
 			</li>
 		</h:panelGroup>
