--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -17,7 +17,7 @@
 		<li><h:link outcome="/core/login/index" rendered="#{coreInfo.systemInstalled and not sessionController.loggedIn}"><i class="fa fa-key"></i> <span><h:outputText value="#{msgsCore['core.menu.login']}" /></span></h:link></li>
 		
 		<!-- User management (Admins only). -->
-		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/manageAcademics/') != -1}" />
+		<c:set var="menuOpen" value="#{request.requestURL.indexOf('core/') != -1}" />
 		<h:panelGroup rendered="#{sessionController.admin}">
 			<li class="treeview #{menuOpen ? 'active' : ''}">
 				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsCore['core.menu.generalSettings']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
@@ -30,21 +30,19 @@
 			</li>
 		</h:panelGroup>
 		
-		<!-- SAE (Admins only).
-		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/manageAlumnis/') != -1}" />
+		<!-- SAE (Admins only). -->
+		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/sae/') != -1}" />
 		<h:panelGroup rendered="#{sessionController.admin}">
 			<li class="treeview #{menuOpen ? 'active' : ''}">
-				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsSae['sae.menu.generalSettings']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
+				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsSae['core.menu.sae']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
 				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
-					<li><h:link outcome="/sae/manageAlumnis/list"><h:outputText value="#{msgsSae['sae.menu.generalSettings.manageAlumnis']}" /></h:link></li>
-					<li><h:link outcome="/sae/manageAlumniHistories/list"><h:outputText value="#{msgsSae['sae.menu.generalSettings.manageAlumniHistories']}" /></h:link></li>
-					<li><h:link outcome="/sae/manageEducations/list"><h:outputText value="#{msgsSae['sae.menu.generalSettings.manageEducations']}" /></h:link></li>
-					<li><h:link outcome="/sae/manageStatements/list"><h:outputText value="#{msgsSae['sae.menu.generalSettings.manageStatements']}" /></h:link></li>
-					<li><h:link outcome="/sae/manageSuggestions/list"><h:outputText value="#{msgsSae['sae.menu.generalSettings.manageSuggestions']}" /></h:link></li>
+					<li><h:link outcome="/sae/manageAlumnis/list"><h:outputText value="#{msgsSae['core.menu.sae.manageAlumnis']}" /></h:link></li>
+					<li><h:link outcome="/sae/manageAlumniHistories/list"><h:outputText value="#{msgsSae['core.menu.sae.manageAlumniHistories']}" /></h:link></li>
+					<li><h:link outcome="/sae/manageStatements/list"><h:outputText value="#{msgsSae['core.menu.sae.manageStatements']}" /></h:link></li>
+					<li><h:link outcome="/sae/manageSuggestions/list"><h:outputText value="#{msgsSae['core.menu.sae.manageSuggestions']}" /></h:link></li>
 				</ul>
 			</li>
 		</h:panelGroup>
-		-->
 		
 		<!-- Research (Professors and Admins). -->
 		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/research/') != -1}" />
