--- a/WebContent/sae/manageAlumnis/form.xhtml
+++ b/WebContent/sae/manageAlumnis/form.xhtml
@@ -9,14 +9,10 @@
                 template="/WEB-INF/decorators/#{coreInfo.decorator}/decorator.xhtml">
 
 	<ui:define name="title">
-		<h:outputText value="#{msgsSae['manageAlumnis.title.create']}" rendered="#{(! manageAlumnisController.readOnly) and (manageAlumnisController.selectedEntity.id == null)}" />
-		<h:outputText value="#{msgsSae['manageAlumnis.title.update']}" rendered="#{(! manageAlumnisController.readOnly) and (manageAlumnisController.selectedEntity.id != null)}" />
 		<h:outputText value="#{msgsSae['manageAlumnis.title.retrieve']}" rendered="#{manageAlumnisController.readOnly}" />
 	</ui:define>
     
     <ui:define name="description">
-		<h:outputText value="#{msgsSae['manageAlumnis.title.create.description']}" rendered="#{(! manageAlumnisController.readOnly) and (manageAlumnisController.selectedEntity.id == null)}" />
-		<h:outputText value="#{msgsSae['manageAlumnis.title.update.description']}" rendered="#{(! manageAlumnisController.readOnly) and (manageAlumnisController.selectedEntity.id != null)}" />
 		<h:outputText value="#{msgsSae['manageAlumnis.title.retrieve.description']}" rendered="#{manageAlumnisController.readOnly}" />
     </ui:define>
 
@@ -26,149 +22,76 @@
 			<ui:param name="formLabel" value="#{msgsSae['manageAlumnis.form.title']}" />
 			<p:hotkey bind="#{msgs['jbutler.crud.hotkey.focusFirstField']}" handler="findObjectById('form:name').focus();" />
 
-			<!-- Field: name. -->
+			<strong> Academic </strong>
+			<!-- Field: academic name. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="name" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.name']}" />
-				<p:inputText id="name" value="#{manageAlumnisController.selectedEntity.name}" required="true" pt:placeholder="#{msgsSae['manageAlumnis.field.name.placeholder']}" disabled="#{manageAlumnisController.readOnly}">
-					<p:ajax event="blur" update="nameField shortNameField" listener="#{manageAlumnisController.suggestShortName}" />
-				</p:inputText>
+				<ui:param name="fieldName" value="academicName" />
+				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.academic.name']}" />
+				<p:inputText id="academicName" value="#{manageAlumnisController.selectedEntity.courseAttendance.academic.name}" disabled="true" />
 			</ui:decorate>
 
 			<!-- Field: email. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="email" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.email']}" />
-				<p:inputText id="email" value="#{manageAlumnisController.selectedEntity.email}" required="true" disabled="#{manageAlumnisController.readOnly}">
-					<p:ajax event="blur" update="emailField" />
-				</p:inputText>
-			</ui:decorate>
-
-			<!-- Field: shortName. -->
-			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="shortName" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.shortName']}" />
-				<p:inputText id="shortName" value="#{manageAlumnisController.selectedEntity.shortName}" required="true" pt:placeholder="#{msgsSae['manageAlumnis.field.shortName.placeholder']}" disabled="#{manageAlumnisController.readOnly}">
-					<p:ajax event="blur" update="shortNameField" />
-				</p:inputText>
+				<ui:param name="fieldName" value="academicEmail" />
+				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.academic.email']}" />
+				<p:inputText id="academicEmail" value="#{manageAlumnisController.selectedEntity.courseAttendance.academic.email}" disabled="true" />
 			</ui:decorate>
 			
 			<!-- Field: cpf. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="cpf" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.cpf']}" />
-				<p:inputMask id="cpf" mask="#{msgs['jbutler.format.taxCode.primefaces']}" value="#{manageAlumnisController.selectedEntity.cpf}" required="true" disabled="#{manageAlumnisController.readOnly}">
-						<f:ajax event="blur" render="cpfField" />
-				</p:inputMask>
-			</ui:decorate>
-			
-			<!-- Field: IdentityCard. -->
-			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="identityCard" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.identityCard']}" />
-				<p:inputMask id="identityCard" mask="#{msgs['jbutler.regex.identityCard']}" maxlength="9" validatorMessage="jbutler.regex.identityCard.message" pt:placeholder="#{msgsSae['manageAlumnis.field.identityCard.placeholder']}" value="#{manageAlumnisController.selectedEntity.identityCard}" required="false" disabled="#{manageAlumnisController.readOnly}">
-						<f:ajax event="blur" render="identityCardField" />
-				</p:inputMask>
-			</ui:decorate>
-			
-			<!-- Field: BirthCity. -->
-			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="birthCity" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.birthCity']}" />
-				<p:inputText id="birthCity" value="#{manageAlumnisController.selectedEntity.birthCity}" required="false" pt:placeholder="#{msgsSae['manageAlumnis.field.birthCity.placeholder']}" disabled="#{manageAlumnisController.readOnly}">
-					<p:ajax event="blur" update="birthCityField" />
-				</p:inputText>
+				<ui:param name="fieldName" value="academicCpf" />
+				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.academic.cpf']}" />
+				<p:inputText id="academicCpf" value="#{manageAlumnisController.selectedEntity.courseAttendance.academic.cpf}" disabled="true" />
 			</ui:decorate>
 			
 			<!-- Field: Nationality. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="nationality" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.nationality']}" />
-				<p:inputText id="nationality" value="#{manageAlumnisController.selectedEntity.nationality}" required="false" pt:placeholder="#{msgsSae['manageAlumnis.field.nationality.placeholder']}" disabled="#{manageAlumnisController.readOnly}">
-					<p:ajax event="blur" update="nationalityField" />
-				</p:inputText>
-			</ui:decorate>
-
-			<!-- Field: birthDate. -->
-			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="birthDate" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.birthDate']}" />
-				<p:inputMask id="birthDate" mask="#{msgs['jbutler.format.date.primefaces']}" value="#{manageAlumnisController.selectedEntity.birthDate}" disabled="#{manageAlumnisController.readOnly}">
-					<p:ajax event="blur" update="birthDateField" />
-					<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.date.java']}" />
-				</p:inputMask>
-				<h:outputText value=" (#{msgs['jbutler.format.date.label']})" />
-			</ui:decorate>
-
-			<!-- Field: roles. -->
-			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="roles" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.roles']}" />
-				<p:autoComplete id="roles" multiple="true" value="#{manageAlumnisController.selectedRoles}" completeMethod="#{manageAlumnisController.completeRoles}" var="role" itemLabel="#{role.name}" itemValue="#{role}" converter="#{manageAlumnisController.roleConverter}" forceSelection="true" disabled="#{manageAlumnisController.readOnly}">
-					<p:column>
-						<h:outputText value="#{role.name}" />
-					</p:column>
-					<p:column>
-						<h:outputText value="#{msgsSae[role.descriptionKey]}" />
-					</p:column>
-				</p:autoComplete>			
+				<ui:param name="fieldName" value="academicNationality" />
+				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.academic.nationality']}" />
+				<p:inputText id="academicNationality" value="#{manageAlumnisController.selectedEntity.courseAttendance.academic.nationality}" disabled="true" />
 			</ui:decorate>
 			
-			<!-- Field: academic roles. -->
+			<strong> Course </strong>
+			
+			<!-- Field: course name. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="academicRoles"/>
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.academicRoles']}"/>
-				<p:autoComplete id="academicRoles" multiple="true" value="#{manageAlumnisController.selectedAcademicRoles}" completeMethod="#{manageAlumnisController.completeAcademicRoles}" var="academicRole" itemLabel="#{academicRole.name}" itemValue="academicRole" converter="#{manageAlumnisController.academicRoleConverter}" forceSelection="true" disabled="true">
-					<p:column>
-						<h:outputText value="#{academicRole.name}" />
-					</p:column>
-					<p:column>
-						<h:outputText value="#{msgsSae[academicRole.descriptionKey]}" />
-					</p:column>
-				</p:autoComplete>			
+				<ui:param name="fieldName" value="courseName" />
+				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.course.name']}" />
+				<p:inputText id="courseName" value="#{manageAlumnisController.selectedEntity.courseAttendance.course.name}" disabled="true" />
 			</ui:decorate>
-
-			<!-- Field: lattesId. -->
+			
+			<!-- Field: code. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="lattesId" />
-				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.lattesId']}" />
-				<p:inputText id="lattesId" value="#{manageAlumnisController.selectedEntity.lattesId}" required="false" pt:placeholder="#{msgsSae['manageAlumnis.field.lattesId.placeholder']}" disabled="#{manageAlumnisController.readOnly}">
-					<p:ajax event="blur" update="lattesIdField" />
-				</p:inputText>
+				<ui:param name="fieldName" value="courseCode" />
+				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.course.courseCode']}" />
+				<p:inputText id="courseCode" value="#{manageAlumnisController.selectedEntity.courseAttendance.course.code}" disabled="true" />
 			</ui:decorate>
-
-			<!-- Field: creationDate. -->
-			<h:panelGroup rendered="#{manageAlumnisController.readOnly}">
+			
+			<!-- Field: academic level. -->
+			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+				<ui:param name="fieldName" value="courseAcademicLevel" />
+				<ui:param name="label" value="#{msgsSae['manageAlumnis.field.course.academicLevels']}" />
+				<p:inputText id="courseAcademicLevel" value="#{manageAlumnisController.selectedEntity.courseAttendance.course.academicLevel.toString()}" disabled="true" />
+			</ui:decorate>
+			
+			<!-- Field: startDate. -->
+			<h:panelGroup rendered="#{manageCourseAttendancesController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-					<ui:param name="fieldName" value="creationDate" />
-					<ui:param name="label" value="#{msgsSae['manageAlumnis.field.creationDate']}" />
-					<p:inputText id="creationDate" value="#{manageAlumnisController.selectedEntity.creationDate}" disabled="true">
-						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
-					</p:inputText>
+					<ui:param name="fieldName" value="startDate" />
+					<ui:param name="label" value="#{msgsSae['manageAlumnis.field.courseAttendance.startDate.year']}" />
+					<p:inputText id="startDate" value="#{manageAlumnisController.selectedEntity.courseAttendance.startYear}" disabled="true" />
 				</ui:decorate>
 			</h:panelGroup>
 
-			<!-- Field: lastUpdateDate. -->
-			<h:panelGroup rendered="#{manageAlumnisController.readOnly}">
+			<!-- Field: endDate. -->
+			<h:panelGroup rendered="#{manageCourseAttendancesController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-					<ui:param name="fieldName" value="lastUpdateDate" />
-					<ui:param name="label" value="#{msgsSae['manageAlumnis.field.lastUpdateDate']}" />
-					<p:inputText id="lastUpdateDate" value="#{manageAlumnisController.selectedEntity.lastUpdateDate}" disabled="true">
-						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
-					</p:inputText>
+					<ui:param name="fieldName" value="endDate" />
+					<ui:param name="label" value="#{msgsSae['manageAlumnis.field.courseAttendance.endDate.year']}" />
+					<p:inputText id="endDate" value="#{manageAlumnisController.selectedEntity.courseAttendance.endYear}" disabled="true" />
 				</ui:decorate>
 			</h:panelGroup>
 
-			<!-- Field: lastLoginDate. -->
-			<h:panelGroup rendered="#{manageAlumnisController.readOnly}">
-				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-					<ui:param name="fieldName" value="lastLoginDate" />
-					<ui:param name="label" value="#{msgsSae['manageAlumnis.field.lastLoginDate']}" />
-					<p:inputText id="lastLoginDate" value="#{manageAlumnisController.selectedEntity.lastLoginDate}" disabled="true">
-						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
-					</p:inputText>
-				</ui:decorate>
-			</h:panelGroup>
 
 			<h:panelGroup rendered="#{! manageAlumnisController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-02.xhtml">
