--- a/WebContent/sae/manageSuggestions/list.xhtml
+++ b/WebContent/sae/manageSuggestions/list.xhtml
@@ -56,13 +56,13 @@
 				loadingMessage="#{msgs['jbutler.text.ajax.loading']}" 
 				emptyMessage="#{manageSuggestionsController.filtering ? msgsSae['manageSuggestions.text.noEntitiesFiltered'] : msgsSae['manageSuggestions.text.noEntities']}">
 
-				<p:column headerText="#{msgsSae['manageSuggestions.field.name']}">
-					<h:outputText value="#{entity.name}" />
+				<p:column headerText="#{msgsSae['manageSuggestions.field.sendDate']}">
+					<h:outputText value="#{entity.sendDate}" />
 				</p:column>
 
-				<p:column headerText="#{msgsSae['manageSuggestions.field.email']}">
-					<h:outputText value="#{entity.email}" />
-				</p:column>
+				<p:column headerText="#{msgsSae['manageSuggestions.field.courseName']}">
+					<h:outputText value="#{entity.course}" />
+				</p:column>			
 
 				<p:ajax event="rowSelect" update=":listingForm:buttonsGroup" />
 				<p:ajax event="rowUnselect" update=":listingForm:buttonsGroup" />
@@ -93,7 +93,7 @@
 						<ui:param name="formName" value="trashForm" />
 						<ui:param name="formLabel" value="#{msgs['jbutler.crud.text.trashHeader']}" />
 						<p:dataList value="#{manageSuggestionsController.trashCan}" var="entity" type="ordered">
-			            	#{entity.name} 
+			            	#{entity.toString()}
 			            </p:dataList>
 						<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-02.xhtml">
 							<p:commandButton action="#{manageSuggestionsController.cancelDeletion}" value="#{msgs['jbutler.crud.button.cancelDeletion']}" icon="fa fa-fw fa-close" process="@this" update=":listingForm" />
