Add approve and reject functions in manage statements. Fix icons of buttons in interface. Business rule to Alumni History: just one history by alumni data.

--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -34,7 +34,7 @@
 		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/sae/') != -1}" />
 		<h:panelGroup rendered="#{sessionController.admin}">
 			<li class="treeview #{menuOpen ? 'active' : ''}">
-				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsSae['core.menu.sae']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
+				<a href="#"><i class="fa fa-university"></i> <span><h:outputText value="#{msgsSae['core.menu.sae']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
 				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
 					<li><h:link outcome="/sae/manageAlumnis/list"><h:outputText value="#{msgsSae['core.menu.sae.manageAlumnis']}" /></h:link></li>
 					<li><h:link outcome="/sae/manageAlumniHistories/list"><h:outputText value="#{msgsSae['core.menu.sae.manageAlumniHistories']}" /></h:link></li>
