--- a/WebContent/sae/manageSuggestions/list.xhtml
+++ b/WebContent/sae/manageSuggestions/list.xhtml
@@ -75,7 +75,7 @@
 			<!-- Buttons shown below the listing. -->
 			<h:panelGroup id="buttonsGroup">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-04.xhtml">
-					<p:commandButton action="#{manageSuggestionsController.create}" value="#{msgs['jbutler.crud.button.create']}" icon="fa fa-fw fa-user-plus" />
+					<p:commandButton action="#{manageSuggestionsController.create}" value="#{msgs['jbutler.crud.button.create']}" icon="fa fa-fw fa-plus-circle" />
 					<p:commandButton action="#{manageSuggestionsController.retrieve}" value="#{msgs['jbutler.crud.button.retrieve']}" icon="fa fa-fw fa-file-text" disabled="#{manageSuggestionsController.selectedEntity == null}" />
 					<p:commandButton action="#{manageSuggestionsController.update}" value="#{msgs['jbutler.crud.button.update']}" icon="fa fa-fw fa-refresh" disabled="#{manageSuggestionsController.selectedEntity == null}" />
 					<p:commandButton action="#{manageSuggestionsController.trash}" value="#{msgs['jbutler.crud.button.delete']}" icon="fa fa-fw fa-trash-o" disabled="#{manageSuggestionsController.selectedEntity == null}" process="@this" update=":listingForm:trashGroup" />
