--- a/WebContent/sae/manageStatements/list.xhtml
+++ b/WebContent/sae/manageStatements/list.xhtml
@@ -42,6 +42,7 @@
 			<ui:param name="formName" value="listingForm" />
 
 			<p:dataTable
+				id="dataTable"
 				widgetVar="listingTable"
 				value="#{manageStatementsController.lazyEntities}" 
 				var="entity" 
@@ -79,15 +80,19 @@
 			<!-- Buttons shown below the listing. -->
 			<h:panelGroup id="buttonsGroup">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-04.xhtml">
-					<p:commandButton action="#{manageStatementsController.create}" value="#{msgs['jbutler.crud.button.create']}" icon="fa fa-fw fa-user-plus" />
+					<p:commandButton action="#{manageStatementsController.create}" value="#{msgs['jbutler.crud.button.create']}" icon="fa fa-fw fa-plus-circle" />
 					<p:commandButton action="#{manageStatementsController.retrieve}" value="#{msgs['jbutler.crud.button.retrieve']}" icon="fa fa-fw fa-file-text" disabled="#{manageStatementsController.selectedEntity == null}" />
 					<p:commandButton action="#{manageStatementsController.update}" value="#{msgs['jbutler.crud.button.update']}" icon="fa fa-fw fa-refresh" disabled="#{manageStatementsController.selectedEntity == null}" />
 					<p:commandButton action="#{manageStatementsController.trash}" value="#{msgs['jbutler.crud.button.delete']}" icon="fa fa-fw fa-trash-o" disabled="#{manageStatementsController.selectedEntity == null}" process="@this" update=":listingForm:trashGroup" />
+					<p:commandButton action="#{manageStatementsController.approve}" update="dataTable" value="#{msgs['jbutler.crud.button.approve']}" icon="fa fa-fw fa-thumbs-up" disabled="#{manageStatementsController.selectedEntity == null}" />
+					<p:commandButton action="#{manageStatementsController.reject}" update="dataTable" value="#{msgs['jbutler.crud.button.reject']}" icon="fa fa-fw fa-thumbs-down" disabled="#{manageStatementsController.selectedEntity == null}" />
 				</ui:decorate>
 				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.create']}" action="#{manageStatementsController.create}" />
 				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.retrieve']}" action="#{manageStatementsController.retrieve}" rendered="#{manageStatementsController.selectedEntity != null}" />
 				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.update']}" action="#{manageStatementsController.update}" rendered="#{manageStatementsController.selectedEntity != null}" />
 				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.delete']}" action="#{manageStatementsController.trash}" rendered="#{manageStatementsController.selectedEntity != null}" process="@this" update=":listingForm:trashGroup" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.approve']}" action="#{manageStatementsController.approve}" rendered="#{manageStatementsController.selectedEntity != null}" />
+				<p:hotkey bind="#{msgs['jbutler.crud.hotkey.reject']}" action="#{manageStatementsController.reject}" rendered="#{manageStatementsController.selectedEntity != null}" />
 			</h:panelGroup>
 
 			<!-- The trash panel: shows entities that have been selected for deletion. -->
